[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/QingyueWang/inGameUI.tscn" type="PackedScene" id=5]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="InGameUI" parent="InterfaceLayer" instance=ExtResource( 5 )]

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[connection signal="game_over" from="Level/Player" to="." method="_on_Player_game_over"]
[connection signal="lose_live" from="Level/Player" to="." method="_on_Player_lose_live"]
[connection signal="double_jump" from="InterfaceLayer/InGameUI" to="." method="_on_InGameUI_double_jump"]
[connection signal="shoot_button" from="InterfaceLayer/InGameUI" to="." method="_on_InGameUI_shoot_button"]
